@@ -605,13 +605,17 @@
 #define ID_OPTIONS_EMULATOR_AUTOMATICALLYIPSPATCH 40176
 #define ID_TOOLS_RECORD_STARTAVIRECORDING 40178
 #define ID_TOOLS_RECORD_STOPAVIRECORDING 40179
+#define ID_OPTIONS_SOUND_VOLUME_1X      40182
+#define ID_OPTIONS_SOUND_VOLUME_2X      40183
+#define ID_OPTIONS_SOUND_VOLUME_3X      40184
+#define ID_OPTIONS_SOUND_VOLUME_4X      40185
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        140
-#define _APS_NEXT_COMMAND_VALUE         40181
+#define _APS_NEXT_COMMAND_VALUE         40186
 #define _APS_NEXT_CONTROL_VALUE         1240
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
