@@ -3,6 +3,7 @@ Version 1.3:
 Core changes:
 - added support for Flash 128K (thanks DesktopMan)
 - added checks for out of memory condition
+- added sound volume option
 - fixed message when failed to write battery file (previously always saying
   failure to open file NULL)
 - fixed sound mixing ratios specified in 0x4000082 (thanks Damian)
@@ -16,6 +17,7 @@ Windows version:
 - can now pause emulator before loading any file
 - memory viewer now displays current edit address
 - removed some test code introduced at version 1.1 that slows down the emulator
+- exporting GSA snapshot defaults title to internal name
 - fixed missing check marks on layers menu
 - fixed bug showing maker code/name from some old games
 SDL version:
